--- a/mapstruct-clone/pom.xml
+++ b/mapstruct-clone/pom.xml
@@ -40,6 +40,18 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.cco</groupId>
+            <artifactId>cco-infra</artifactId>
+            <version>1.2.2-SNAPSHOT</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 
     <build>
